--- a/javascript/html/DOM.html
+++ b/javascript/html/DOM.html
@@ -24,12 +24,14 @@
     <script>
 
         /*
+        Manipulando elementos
 
         getElementById() - Id
         getElementsByTagName() - Tag Name
         getElementsByClassName() - Class Name
         getElementsByName() - Name
         .value - busca o valor do elemento
+
 
         */
 
@@ -40,8 +42,6 @@
         console.log(document.getElementsByClassName('text_get'))
 
         console.log(document.getElementsByName('nome'))
-
-
         
     </script>
 
