--- a/bootstrap/margin-padding.html
+++ b/bootstrap/margin-padding.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>Cores e Backgrounds</title>
+    <title>Margin & Padding</title>
 </head>
 <body class="bg-light">
 
     <!--
         margin 0~5 m mt mb ml mr my mx
         padding 0~5 p pt pb pl pr py px
+        m-auto
     -->
     <p class="bg-warning py-2 mt-4">margin & padding</p>
 
