--- a/bootstrap/barra-navegacao.html
+++ b/bootstrap/barra-navegacao.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6/dist/css/bootstrap.min.css">
-    <title>botões</title>
+    <title>nav e navbar</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         justify-content-end
         flex-column
     -->
-    <h1>Navegação com abas</h1>
+    <h1>nav com abas</h1>
     <ul class="nav nav-pills justify-content-center flex-column">
         <li class="nav-item">
             <a class="nav-link active" href="#">home</a>
@@ -46,7 +46,7 @@
         navbar-light
         navbar-dark
     -->
-    <h1>Barra de navegação simples</h1>
+    <h1>navbar simples</h1>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <!-- Logo -->
         <a href="#" class="navbar-brand">Logo</a>
@@ -73,7 +73,7 @@
         data-target="#nav-target"
         navbar-toggler-icon
     -->
-    <h1>Barra de navegação responsiva</h1>
+    <h1>navbar responsiva</h1>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <!-- Logo -->
         <a href="#" class="navbar-brand">Logo</a>
@@ -101,7 +101,69 @@
     <!--
 
     -->
-    <h1>Barra de navegação com formulário</h1>
+    <h1>navbar responsiva com form</h1>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Logo</a>
+        <!-- Menu Hamburguer -->
+        <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#nav-bar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Menu -->
+        <nav class="collapse navbar-collapse" id="nav-bar">
+            <ul class="navbar-nav ml-auto mr-1">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Sobre</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Produtos</a>
+                </li>
+            </ul>
+            <form class="form-inline">
+                <input type="text" class="form-control" placeholder="Pesquisar...">
+                <button class="btn btn-outline-success ml-1">Ok</button>
+            </form>
+        </nav>
+    </nav>
+    <br><br><br>
+
+    <h2>navbar responsiva com dropdown</h2>
+    <!-- dropdown dentro da li -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <!-- Logo -->
+        <a href="#" class="navbar-brand">Logo</a>
+        <!-- Menu Hamburguer -->
+        <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#navb">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav class="collapse navbar-collapse" id="navb">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Sobre</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Produtos</a>
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">Produto 1</a>
+                        <a href="#" class="dropdown-item">Produto 2</a>
+                        <a href="#" class="dropdown-item">Produto 3</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </nav>
 
 
     <br><br><br><br><br><br><br>
